# boost-cmake

./: .bumpversion.cfg  .bumpversion.md  .cmake-format  .gitignore  CMakeLists.txt  CMakeReleasePresets.json  GNUmakefile  README.md
.github/workflows/: cmake.yml
cmake/: AddUninstallTarget.cmake  CMakeLists.txt.in  Config.cmake.in  PackageProject.cmake
cmake/Modules/: AddBoostLib.cmake  AddBoostTest.cmake  CheckBoostVersion.cmake  CheckPreprocessor.cmake  FindIconv.cmake  PlatformDetect.cmake  WarningsAsErrors.cmake
cmake/Toolchains/: ios.cmake
libs/: chrono.cmake  filesystem.cmake  locale.cmake  serialization.cmake
patches/1.81.0/: archive-01.patch  filesystem-01.patch  serialization-01.patch  thread_future-01.patch
